Making WYSIWYG configuration work better.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -795,12 +795,12 @@ editors also have the ability to make simple HTML tables for basic layouts.
 	<h2>File Browsers/Uploaders</h2>
 
 	<p>
-		<input type="radio" name="file_browser_install" id="file_browser_install_kcfinder" value="kcfinder" checked="checked"/>
-		<label for="file_browser_install_kcfinder">Install KCFinder</label>
+		<input type="radio" name="install_file_browser" id="install_file_browser_kcfinder" value="kcfinder" checked="checked"/>
+		<label for="install_file_browser_kcfinder">Install KCFinder</label>
 	</p>
 	<p>
-		<input type="radio" name="file_browser_install" id="file_browser_install_core5_filemanager" value="core5_filemanager"/>
-		<label for="file_browser_install_core5_filemanager">Install Core Five FileManager</label>
+		<input type="radio" name="install_file_browser" id="install_file_browser_core5_filemanager" value="core5_filemanager"/>
+		<label for="install_file_browser_core5_filemanager">Install Core Five FileManager</label>
 	</p>
 	<input type="hidden" name="core5_filemanager_connector" value="pl" /> 
 <!-- 
