--- a/dada/installer-disabled/templates/ckeditor_config_js.tmpl
+++ b/dada/installer-disabled/templates/ckeditor_config_js.tmpl
@@ -6,13 +6,15 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 
 CKEDITOR.editorConfig = function(config) {
     
+   <!-- tmpl_if configure_file_browser --> 
    config.filebrowserBrowseUrl      = '<!-- tmpl_var file_manager_browse_url -->?type=files';
    config.filebrowserImageBrowseUrl = '<!-- tmpl_var file_manager_browse_url -->?type=images';
    config.filebrowserFlashBrowseUrl = '<!-- tmpl_var file_manager_browse_url -->?type=flash';
    config.filebrowserUploadUrl      = '<!-- tmpl_var file_manager_upload_url -->?type=files';
    config.filebrowserImageUploadUrl = '<!-- tmpl_var file_manager_upload_url -->?type=images';
    config.filebrowserFlashUploadUrl = '<!-- tmpl_var file_manager_upload_url -->?type=flash';
-
+   <!-- /tmpl_if --> 
+   
    config.height                    = '30em';
 
    config.fullPage                  = true;
