--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -92,8 +92,10 @@
 
 
  </fieldset> 
+
+<fieldset> 
      
-<h1>Additional Configuration?</h1> 
+<legend>Additional Configuration?</legend> 
 
 <p>If you want to perform any additional configuration, your outside config file is located at, </p> 
 
@@ -103,6 +105,7 @@
 
 </form> 
 	
+</fieldset> 
 
 
 
