--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -437,7 +437,10 @@
 			Headers: 
 		</legend>
         <p>
-         <label for="unsubscription_notice_message_subject" class="label_by_5">Subject:</label> <input type="text" name="unsubscription_notice_message_subject" id="unsubscription_notice_message_subject" value="<!-- tmpl_var list_settings.unsubscription_notice_message_subject escape=HTML -->" class="midi" />
+         <label for="unsubscription_notice_message_subject" class="label_by_5">
+             Subject:
+         </label>
+         <input type="text" name="unsubscription_notice_message_subject" id="unsubscription_notice_message_subject" value="<!-- tmpl_var list_settings.unsubscription_notice_message_subject escape=HTML -->" class="midi" />
         </p>
 	</fieldset>
 	<fieldset>
