--- a/dada/templates/plugins/bridge/edit_email_msgs.tmpl
+++ b/dada/templates/plugins/bridge/edit_email_msgs.tmpl
@@ -279,10 +279,10 @@
 		</legend>
 		
 		<p class="alert">
-			A global message size limit of <!-- tmpl_var Soft_Max_Size_Of_Any_Message --> KB 
+			A global message size limit of <!-- tmpl_var list_settings.msg_soft_size_limit --> KB 
 			for all mailing lists. If a message is received that is larger than this limit, 
 			it will be rejected and the original poster will receive this message. Any messages
-			larger than <!-- tmpl_var Max_Size_Of_Any_Message --> KB  will simply be ignored. 
+			larger than <!-- tmpl_var list_settings.msg_hard_size_limit --> KB  will simply be ignored. 
 		</p>
 		
 		<p>
