Small copy changes.

--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -790,11 +790,11 @@ General
          </td> 
          <td>
           <label for="send_received_msg">
-           Send, "Message Received" notification
+           Send, &quot;Message Received&quot; notification
           </label>
           <br /> 
-          Mass Mailing can take a long time. A, &quot;message received!&quot; message sent to the original sender
-          can stop them from second-guessing if if their message was received. 
+          A Mass Mailing may take a long time. A, &quot;Message Received&quot; notification sent to the original sender
+          can stop them from second-guessing if if their message was successfully sent to the mailing list. 
          </td>
         </tr> 
 
