This makes the right things disappear when you ask them to.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -535,9 +535,8 @@ If using either the SQL backends, make sure to create a new database before conf
 </p>
 
 <p>
-<em>Some</em> of the plugins/extensions require additional configuration, usually a cronjob has to be manually set, 
-for it to work correctly. For help on setting the cronjob, see the 
-<a href="<!-- tmpl_var DOC_URL -->" target="_blank">online documentation</a> for the plugin/extension. 
+<em>Some</em> of the plugins/extensions require additional configuration 
+for them to work correctly.
 </p>
 
 	
@@ -556,7 +555,6 @@ for it to work correctly. For help on setting the cronjob, see the
 	<label for="install_bridge">
 		Bridge
 	</label>
-	<span class="alert">Requires Additional Configuration (cronjob)</span>	
 </p> 
 <div id="bridge_options">
 	<fieldset> 
@@ -623,7 +621,7 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <p>
 	<input type="checkbox" name="install_bounce_handler" id="install_bounce_handler" value="1" class="radio_toggleDivs" data-target="bounce_handler_configuration" />
-	<label for="install_bounce_handler">Bounce Handler</label> <span class="alert">Requires Additional Configuration (cronjob)</span></p>
+	<label for="install_bounce_handler">Bounce Handler</label></p>
 
 <div id="bounce_handler_options">
 	<fieldset> 
@@ -723,7 +721,7 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <p><input type="checkbox" name="install_change_list_shortname" id="install_change_list_shortname" value="1"  /><label for="install_change_list_shortname">Change Your List Short Name</label></p> 
 
-<p><input type="checkbox" name="install_password_protect_directories" id="install_password_protect_directories" value="1"  /><label for="install_password_protect_directories">Password Protect Directories</label> <span class="alert">Optionally Requires Additional Configuration (cronjob)</span>	</p> 
+<p><input type="checkbox" name="install_password_protect_directories" id="install_password_protect_directories" value="1"  /><label for="install_password_protect_directories">Password Protect Directories</label></p> 
 
 <p><input type="checkbox" name="install_global_config" id="install_global_config" value="1"  /><label for="install_global_config">Global Configuration</label></p> 
 
@@ -792,7 +790,6 @@ editors also have the ability to make simple HTML tables for basic layouts.
 
 </fieldset> 
 
-</div> 
 
 <fieldset> 
 	<legend>Advanced Configuration (Optional)</legend>
@@ -1598,6 +1595,7 @@ editors also have the ability to make simple HTML tables for basic layouts.
 
 </fieldset> 
 
+</div> 
 
 
 <input type="hidden" name="flavor" value="check" /> 
